# road_to_riches

./: .coverage  .gitignore  =13.0  AGENTS.md  DEVELOPMENT.md  PROGRESS.md  README.md  beads_export.jsonl  play.py  play.sh  pyproject.toml
.beads/: .gitignore  config.jsonl  dependencies.jsonl  events.jsonl  export.jsonl  issues.jsonl  metadata.json
boards/: all_square_types.json  large_test_board.json  solo_board.json  test_board.json
design/: gameplay.md  in_game_reporting.md  p0_client.md  technical.md  web_client.md
scripts/: venture_placeholder.py
tests/: test_ai_pathfinder.py  test_bankruptcy.py  test_basic_ai_client.py  test_basic_ai_invest.py  test_basic_ai_liquidation.py  test_board_converter.py  test_board_renderer.py  test_board_validation.py  test_client_bridge.py  test_direction.py  test_display.py  test_game_engine.py  test_game_events.py  test_game_loop.py  test_game_loop_auction.py  test_game_loop_init_handlers.py  test_game_loop_liquidation.py  test_game_loop_negotiation.py  test_game_loop_scripts.py  test_game_loop_trade.py  test_headless_soak.py  test_lut.py  test_main_cli.py  test_pathfinding.py  test_paths.py  test_pipeline.py  test_play_launcher.py  test_presentation_barrier_integration.py  test_property.py  test_protocol.py  test_report_orchestrator_tools.py  test_reporting.py  test_run_pyright.py  test_save.py  test_script_runner.py  test_server.py  test_server_input.py  test_server_session.py  test_square_handler.py  test_stockbroker_and_dividends.py  (+6 more)
tools/: run_pyright.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
(+139 files in other folders)
